--- a/render.yaml
+++ b/render.yaml
@@ -1,10 +1,10 @@
 services:
-  - type: web
-    name: leisure-idea-bot
+  - type: worker
+    name: idea-bot
     env: python
     plan: free
-    buildCommand: ""
-    startCommand: "python bot.py"
+    buildCommand: pip install -r requirements.txt
+    startCommand: python bot.py
     envVars:
       - key: BOT_TOKEN
         sync: false
